-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.1
-
None
-
Linux gcc
-
-
1
-
bf29c9c81 (dev), 09b48a91d (6.7), 2afa1caf7 (6.6), a80cefd2e (tqtc/lts-6.5)
-
Foundations Sprint 98
When QCanDbcFileParser parses a dbc file encoded in utf-8 which contains signals like these:
SG_ Sig_exmp_Temp : 0|7@1+ (1,0) [0|70] "°C" Vector__XXX SG_ Sig_GPS_Longitude : 8|8@1- (1E-009,0) [-1.28E-007|1.27E-007] "deg" Vector__XXX
it will produce warnings saying:
"Failed to find signal description in string SG_ Sig_exmp_Temp : 0|7@1+ (1,0) [0|70] \"°C\" Vector__XXX", "Failed to find signal description in string SG_ Sig_GPS_Longitude : 8|8@1- (1E-009,0) [-1.28E-007|1.27E-007] \"deg\" Vector__XXX"
and therefore will not be able to recognize these signals processing a QCanBusFrame.
I would argue that the structure of the signal description is correct nevertheless and the signal should be parsed. I am not too sure about how the regex is working and which characters and structure it supports. But it would be interesting to know why it fails exactly.
For Gerrit Dashboard: QTBUG-114397 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
528052,3 | QCanDbcFileParser: fix the parsing of scientific notation of FP values | dev | qt/qtserialbus | Status: MERGED | +2 | 0 |
528307,2 | QCanDbcFileParser: fix the parsing of scientific notation of FP values | 6.7 | qt/qtserialbus | Status: MERGED | +2 | 0 |
528551,2 | QCanDbcFileParser: fix the parsing of scientific notation of FP values | 6.6 | qt/qtserialbus | Status: MERGED | +2 | 0 |
528559,2 | QCanDbcFileParser: fix the parsing of scientific notation of FP values | tqtc/lts-6.5 | qt/tqtc-qtserialbus | Status: MERGED | +2 | 0 |