QCanDbcFileParser: fix the parsing of scientific notation of FP values

The parser assumed that the values in the scientific notation should
always have a '.' and at least one digit after it before the exponent
part.
However, representations like 1E-009, 2e03, or even 1.e4 are also
valid.

Adjust the regexp and extend the unit-tests to cover these cases.

Amends 186f34bec49bcdf69817dec016317dd1edcbfa22.

Fixes: QTBUG-114397
Pick-to: 6.6 6.5
Change-Id: Ie44212a7b20b2786fb5d15dedb9c15eba5f1161c
Reviewed-by: André Hartmann <aha_1980@gmx.de>
(cherry picked from commit bf29c9c8193ac5e3b4eeafc961b8cbd0d427b3e6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>